<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/categories_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="Categorias"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/categories_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories_text"
        android:layout_marginTop="20dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/completed_radio_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/completed_text"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/background_radio_button_completed"
            android:textColor="@drawable/text_color_radio_button"
            android:button="@null"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/not_completed_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:text="@string/not_completed_text"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/background_radio_button_not_completed"
            android:textColor="@drawable/text_color_radio_button"
            android:button="@null"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/expired_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:text="@string/expired_text"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/background_radio_button_expired"
            android:textColor="@drawable/text_color_radio_button"
            android:button="@null"
            tools:ignore="RtlSymmetry" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_remove_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_button"
        android:backgroundTint="@null"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:text="@string/btn_remove_filter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories_radio_group" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_apply_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/background_button"
        android:backgroundTint="@null"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:text="@string/apply_filters_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_remove_filter"
        app:layout_constraintTop_toBottomOf="@id/categories_radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>