<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="?colorPrimary">

    <SearchView
        android:id="@+id/search_budgets_by_name_searchView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:background="@drawable/background_search_input"
        android:searchIcon="@drawable/search_icon"
        android:iconifiedByDefault="false"
        android:theme="@style/Theme.SearchView"
        android:queryHint="@string/search_budgets_query_hint_text"
        android:queryBackground="@android:color/transparent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_show_filters_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_budgets_by_name_searchView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_button_select"
        android:drawableEnd="@drawable/arrow_down_icon"
        android:drawablePadding="6dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp"
        android:fontFamily="@font/poppins_medium"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/btn_show_filters_dialog_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:elevation="10dp"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/budgets_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_show_filters_dialog"
        android:layout_marginTop="18dp"
        android:padding="18dp"
        tools:itemCount="6"
        tools:listitem="@layout/layout_budget" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp"
        android:backgroundTint="#126178"
        android:contentDescription="@string/button_add_budget_content_description"
        android:src="@drawable/add_icon"
        app:fabCustomSize="50dp"
        tools:ignore="RedundantDescriptionCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>